--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "author": "mariusgessler <marius.gessler@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
     "node-telegram-bot-api": "^0.40.0"
