--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "bored_in_the_house",
   "version": "1.0.0",
   "description": "Telegram bot for when you're bored in the house",
-  "main": "index.js",
+  "main": "./src/index.js",
   "repository": "git@github.com:mariusgessler/bored_in_the_house.git",
   "author": "mariusgessler <marius.gessler@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/index.js",
     "lint": "eslint ./ --fix"
   },
   "dependencies": {
