--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "start": "node ./src/index.js",
     "lint": "eslint ./ --fix"
   },
+  "engines": {
+    "node": "13.8.0"
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
