--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Telegram bot for when you're bored in the house",
   "main": "./src/index.js",
-  "repository": "git@github.com:mariusgessler/bored_in_the_house.git",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/mariusgessler/bored_in_the_house.git"
+  },
   "author": "mariusgessler <marius.gessler@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -15,13 +18,20 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^7.14.2",
-    "node-telegram-bot-api": "^0.40.n0"
+    "node-telegram-bot-api": "^0.40.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/mariusgessler/bored_in_the_house/issues"
+  },
+  "homepage": "https://github.com/mariusgessler/bored_in_the_house#readme",
+  "keywords": []
 }
