--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "firebase": "^7.14.2",
+    "heroku": "^7.39.6",
     "node-telegram-bot-api": "^0.40.0"
   },
   "devDependencies": {
